components/project/Project.module.css
.project_container {
  width: 100%;
  max-width: 350px;
  height: 300px;
  background-color: #e5e5e5;
  border-radius: 5%;
  position: relative;
  transition: all .5s;
  display: flex;
  flex-direction: column;
}

.project_container a {
  display: block;
  font-weight: bold;
  height: 100%;
}

.project_image {
  width: 100%;
  height: 100%;
  border-bottom-left-radius: 5%;
  border-bottom-right-radius: 5%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.project_header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 5px 10px;
  gap: 50px;
  max-height: 25%;
}

.project_description {
  position: absolute;
  bottom: 0;
  pointer-events: none;
  opacity: 0;
  padding: 5px 10px;
  max-height: 60%;
  transition: all .5s;
  width: 100%;
  border-radius: 5%;
  background-color: #e5e5e5;
  color: var(--text-color);
  overflow: hidden;
  text-overflow: clip;
}

.project_container:hover {
  transform: scale(1.05);
}

.project_container:hover .project_description {
  opacity: 1;
}

.github_link {
  transition: all .5s;
}

.github_link:hover {
  color: var(--link-hover-color);
}

